added layout for controls and instructions to start it

--- a/index.html
+++ b/index.html
@@ -42,6 +42,39 @@
       </div>
     </div>
 
+    <div class="control-wrapper">
+      <div class="control control-transition control-hidden">
+        <div class="control-row">
+          <div class="control-item">
+            <img src="/img/animation.svg" alt="" class="control-icon" />
+          </div>
+          <div class="control-item">
+            <img src="/img/help.svg" alt="" class="control-icon" />
+          </div>
+          <div class="control-item">
+            <img src="/img/share.svg" alt="" class="control-icon" />
+          </div>
+        </div>
+        <div class="control-row">
+          <h3 class="control-credit">Made with 💜 by ardent-purple</h3>
+        </div>
+        <div class="control-row">
+          <div class="control-item">
+            <img src="/img/xcom.svg" alt="" class="control-icon" />
+          </div>
+          <div class="control-item">
+            <img src="/img/linkedin.svg" alt="" class="control-icon" />
+          </div>
+          <div class="control-item">
+            <img src="/img/github.svg" alt="" class="control-icon" />
+          </div>
+          <div class="control-item">
+            <img src="/img/kofi.svg" alt="" class="control-icon" />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="./scripts/index.js" defer></script>
   </body>
 </html>
