implement help control; move controls into separate file

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="control-item">
             <img src="/img/animation.svg" alt="" class="control-icon" />
           </div>
-          <div class="control-item">
+          <div class="control-item" id="control-help">
             <img src="/img/help.svg" alt="" class="control-icon" />
           </div>
           <div class="control-item">
@@ -59,18 +59,38 @@
           <h3 class="control-credit">Made with 💜 by ardent-purple</h3>
         </div>
         <div class="control-row">
-          <div class="control-item">
+          <a
+            href="https://x.com/ardentpurpledev"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="control-item"
+          >
             <img src="/img/xcom.svg" alt="" class="control-icon" />
-          </div>
-          <div class="control-item">
+          </a>
+          <a
+            href="https://www.linkedin.com/in/max-reysh/"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="control-item"
+          >
             <img src="/img/linkedin.svg" alt="" class="control-icon" />
-          </div>
-          <div class="control-item">
+          </a>
+          <a
+            href="https://github.com/ardent-purple"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="control-item"
+          >
             <img src="/img/github.svg" alt="" class="control-icon" />
-          </div>
-          <div class="control-item">
+          </a>
+          <a
+            href="https://ko-fi.com/ardentpurple"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="control-item"
+          >
             <img src="/img/kofi.svg" alt="" class="control-icon" />
-          </div>
+          </a>
         </div>
       </div>
     </div>
