added share feature

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="control-item" id="control-help">
             <img src="/img/help.svg" alt="" class="control-icon" />
           </div>
-          <div class="control-item">
+          <div class="control-item" id="control-share">
             <img src="/img/share.svg" alt="" class="control-icon" />
           </div>
         </div>
