--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
       name="description"
       content="tintpad is a free web app for displaying or animating any color on your screen. Use it to create a primitive lightpad. The app can be used to set a mood, create an environment, create a simple light source for reading or just good mood."
     />
+
+    <!-- favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/public/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/public/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/public/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/public/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/public/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/public/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="/public/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,12 +45,15 @@
       rel="stylesheet"
     />
 
+    <!-- prefetch images -->
     <link rel="prefetch" href="/img/left-right-min.svg" />
     <link rel="prefetch" href="/img/up-down-min.svg" />
     <link rel="prefetch" href="/img/tap.svg" />
 
+    <!-- styles -->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- libs -->
     <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
     <script src="https://colorjs.io/dist/color.global.min.js"></script>
   </head>
@@ -62,6 +96,9 @@
           </div>
           <div class="control-item" id="control-share">
             <img src="/img/share.svg" alt="" class="control-icon" />
+          </div>
+          <div class="control-item control-item-none" id="control-install">
+            <img src="/img/install.svg" alt="" class="control-icon" />
           </div>
           <div class="control-item" id="control-close">
             <img src="/img/close.svg" alt="" class="control-icon" />
